--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".fragments.DynamicFragmentActivity"></activity>
+        <activity android:name=".fragments.FragmentsActivity" />
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ReceiverActivity" />
-        <activity android:name=".LifecycleActivity"></activity>
+        <activity android:name=".LifecycleActivity" />
         <activity android:name=".FruitsActivity" />
         <activity android:name=".FoodActivity" />
         <activity
