navigation drawer example and fragments communication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fragments.DynamicFragmentActivity"></activity>
-        <activity android:name=".fragments.FragmentsActivity" />
-        <activity android:name=".HomeActivity">
+        <activity
+            android:name=".fragments.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".fragments.DisplayFromFragmentActivity" />
+        <activity android:name=".fragments.MessageActivity" />
+        <activity android:name=".fragments.DynamicFragmentActivity" />
+        <activity android:name=".fragments.FragmentsActivity" />
+        <activity android:name=".HomeActivity">
+
         </activity>
         <activity android:name=".ReceiverActivity" />
         <activity android:name=".LifecycleActivity" />
