--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_MOVIES_URL", '"https://api.themoviedb.org/3/"'
+            buildConfigField "String", "BASE_GITHUB_URL", '"https://api.github.com/"'
+        }
+        debug {
+            buildConfigField "String", "BASE_MOVIES_URL", '"https://api.themoviedb.org/3/"'
+            buildConfigField "String", "BASE_GITHUB_URL", '"https://api.github.com/"'
         }
     }
 }
@@ -34,4 +44,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+
 }
