--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fragments.AlertsActivity"></activity>
+        <activity android:name=".retrofit_sample.GithubActivity"></activity>
+        <activity android:name=".fragments.AlertsActivity" />
         <activity
             android:name=".fragments.HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".fragments.DisplayFromFragmentActivity" />
         <activity android:name=".fragments.MessageActivity" />
         <activity android:name=".fragments.DynamicFragmentActivity" />
