--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha03'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation "androidx.room:room-runtime:2.2.3"
+    annotationProcessor "androidx.room:room-compiler:2.2.3"
+
 
     //implementation 'com.google.firebase:firebase-auth:19.2.0'
-   // implementation 'com.google.android.gms:play-services-auth:17.0.0'
-   // implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    // implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    // implementation 'com.google.firebase:firebase-messaging:20.1.0'
 }
