--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".retrofit_sample.GithubActivity"></activity>
+        <activity android:name=".storage_sample.room_sample.CompanyAndEmployeesActivity"></activity>
+        <activity android:name=".retrofit_sample.GithubActivity" />
         <activity android:name=".fragments.AlertsActivity" />
         <activity
             android:name=".fragments.HomeActivity"
